# quat

./: .gitignore  README.md  pyproject.toml
config/: data_contract.example.json  data_contract.json  electricity_tariffs.json  meter_registry.csv
outputs/quat_portfolio_2026-07-20/: quat_energy_monitoring_report.xlsx  quat_energy_monitoring_report.xlsx.inspect.ndjson
outputs/quat_tariff_2026-07-20/: quat_electricity_tariff_model.xlsx  quat_electricity_tariff_model.xlsx.inspect.ndjson
scripts/: audit_data.py  build_portfolio_report.py  run_baselines.py  sync_askua.py
src/quat/: __init__.py  askue_import.py  audit.py  baselines.py  portfolio.py  tariffs.py
tests/: test_askue_import.py  test_audit.py  test_tariffs.py
