[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quat-energy"
version = "0.1.0"
description = "Аудит и аналитика интервальных данных АСКУЭ"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
]

[project.optional-dependencies]
data = [
  "openpyxl>=3.1",
  "pyarrow>=16",
]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
